[gd_scene load_steps=5 format=3 uid="uid://c6eltd0d8c00v"]

[ext_resource type="Script" uid="uid://bnoshf5b8hhj3" path="res://Scripts/encyclopedia_view.gd" id="1_kfvci"]
[ext_resource type="Texture2D" uid="uid://be2nricanp3jc" path="res://Assets/Icons/x01.png" id="2_8svmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8svmq"]
bg_color = Color(0.3137255, 0.45882353, 0.4862745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8svmq"]
font_size = 30

[node name="Encyclopedia" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfvci")
target_scene = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8svmq")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="ButtonContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Page1" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "#1The Chinese Mitten Crab"

[node name="Page2" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "#2Taxonomy"

[node name="Page3" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "#3Lifecycle"

[node name="Page4" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "#4Invasive Traits"

[node name="Page5" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "#5Ecological Impact"

[node name="Page6" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "#6Human Concern"

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Icon" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/Panel"]
custom_minimum_size = Vector2(700, 230)
layout_mode = 0
offset_left = 27.0
offset_top = 30.0
offset_right = 727.0
offset_bottom = 230.0

[node name="Panel2" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/Panel2"]
custom_minimum_size = Vector2(700, 300)
layout_mode = 0
offset_left = 30.0
offset_top = 19.0
offset_right = 730.0
offset_bottom = 59.0

[node name="Title" type="Label" parent="PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/Panel2/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_8svmq")
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/Panel2/Panel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -99.0
offset_right = 5.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
text = "
"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 3.0000002
offset_right = 71.0
offset_bottom = 81.0
grow_horizontal = 0
scale = Vector2(0.40000963, 0.44)
icon = ExtResource("2_8svmq")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Button" to="." method="_on_close_encyclopedia_button_pressed"]
